[test] 기능 변경에 따른 테스트 수정(#242)
기능 변경에 따른 테스트 수정